# CachyOS-Welcome

./: Cargo.toml  build.rs  meson.build
data/: preferences.json
data/pages/de/: release
data/pages/en/: release
data/pages/pl/: readme  release
data/pages/ru/: release
i18n/by/: cachyos_hello.ftl
i18n/cs/: cachyos_hello.ftl
i18n/en/: cachyos_hello.ftl
i18n/nl/: cachyos_hello.ftl
i18n/ru/: cachyos_hello.ftl
i18n/sk/: cachyos_hello.ftl
i18n/tr/: cachyos_hello.ftl
src/: application.rs  application_browser.rs  main.rs  pages.rs  utils.rs
ui/: cachyos-hello.glade
